--- a/S04/index.html
+++ b/S04/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Mi web</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- ENCABEZADO -->
     <img src="images/banner.png" alt="banner HTML y CSS">
     <h1>Bienvenidos</h1>
-    <a href="index.html">Inicio</a> | 
-    <a href="pages/materia1.html">Materia 1</a> |
-    <a href="pages/materia2.html">Materia 2</a>
+    
+    <ul>
+        <li>
+            <a href="index.html">Inicio</a>
+        </li>
+        <li>
+            <a href="pages/materia1.html">Materia 1</a>
+        </li>
+        <li>
+            <a href="pages/materia2.html">Materia 2</a>
+        </li>
+    </ul>
+   
+    
+    <hr>
+
+    <a href="https://es.wikipedia.org/wiki/HTML5" target="_blank">Wikipedia</a>
+    <br>
+    <a href="https://facebook.com/web">
+        <i class="fa-brands fa-facebook"></i> Facebook
+    </a>
+
+    <a href="https://youtube.com">
+        <i class="fa-brands fa-youtube"></i> Youtube
+    </a>
+    <!-- ESO NO SE VA A VER -->
+    <h2>Lista Ordenada o numerada</h2>
+    <h4>Pasos para preparar un buen mate</h4>
+    <ol>  <!-- Ordered List-->
+        <li>Calentar el agua</li>
+        <li>Colocar la yerba en el mate</li>
+        <li>Organizar la yerba a un lado</li>
+        <li>Colocar el agua</li>
+        <li>Disfrutar</li>
+    </ol>
+
+    <h4>Lista de Comprar</h4>
+    <ul> <!-- UnOrdered List / No numerada -->
+        <li>Pan</li>
+        <li>Tomate</li>
+        <li>Bizcochos</li>
+        <li>Dulce de leche</li>
+    </ul>
+
+    <h4>Mis redes</h4>
+    <ul>
+        <li>
+            <a href="https://www.youtube.com/watch?v=UAsDxsUkvyw" target="_blank">
+                <img src="images/facebook.png" alt="fecebook" width="48">
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/miweb" target="_blank">
+                <img src="images/instagram.png" alt="instagram" width="48">
+            </a>  
+        </li>
+        <li>
+            <a href="https://www.youtube.com/miweb" target="_blank">
+               <img src="images/youtube.png" alt="youtube" width="32">
+               Youtube
+            </a>
+        </li>
+    </ul>
+
+
 </body>
 </html>
